--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -108,19 +108,17 @@ security:
         enabled: false
     oauth2:
         client:
-            access-token-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/token
-            user-authorization-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/auth
-            client-id: web_app
-            client-secret: web_app
+            access-token-uri: https://dev-820448.oktapreview.com/oauth2/default/v1/token
+            user-authorization-uri: https://dev-820448.oktapreview.com/oauth2/default/v1/authorize
+            client-id: 0oafgjlk9luL2ntTn0h7
+            client-secret: quO-huqIdSX_OShCXCXjKEP9ElocUChqHw_k3gpq
             client-authentication-scheme: form
             scope: openid profile email
         resource:
             filter-order: 3
-            user-info-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/userinfo
-            token-info-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/token/introspect
+            user-info-uri: https://dev-820448.oktapreview.com/oauth2/default/v1/userinfo
+            token-info-uri: https://dev-820448.oktapreview.com/oauth2/default/v1/introspect
             prefer-token-info: false
-            jwt:
-                key-uri: http://localhost:9080/auth/realms/jhipster
 
 server:
     session:
